# max-strike

./: .gitignore  README.md  package-lock.json  package.json
core/: go.mod  go.sum  main.go  max-strike-core
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/debian/: postinst
src-tauri/src/: lib.rs  main.rs
src/components/: FileImport.tsx  QrScanner.tsx
src/hooks/: useSettings.ts  useSubscriptions.ts
src/types/: index.ts
src/utils/: parseShareLink.ts  parseSubscription.ts
