[package]
name = "max-strike"
version = "1.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "max_strike_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
lazy_static = "1.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
dirs = "6.0.0"
tauri-plugin-shell = "2.3.5"
chrono = "0.4.45"
tauri-plugin-clipboard-manager = "2.3.2"
